--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.theartofdev.edmodo.cropper.test.MainActivity">
+        <activity
+            android:exported="true"
+            android:name="com.theartofdev.edmodo.cropper.test.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
